# minirys_nav2_ws

./: README.md
minirys_autonomy/: CMakeLists.txt  package.xml
minirys_autonomy/include/nodes/: AutonomyNode.hpp
minirys_autonomy/launch/: autonomy.launch.py
minirys_autonomy/src/executables/: autonomy.cpp
minirys_autonomy/src/nodes/: AutonomyNode.cpp
minirys_costmap_plugins/nav2_minirys_costmap_plugin/: CMakeLists.txt  multiple_robots_layer.xml  package.xml
minirys_costmap_plugins/nav2_minirys_costmap_plugin/include/nav2_minirys_costmap_plugin/: multiple_robots_layer.hpp
minirys_costmap_plugins/nav2_minirys_costmap_plugin/src/: multiple_robots_layer.cpp
minirys_description/: CMakeLists.txt  package.xml
minirys_description/config/: nav2_params.yaml  slam_toolbox.yaml
minirys_description/launch/: display.launch.py  display4.launch.py  localization_launch.py  nav_launch.py
minirys_description/maps/: grant_map2.yaml  heros_board.yaml  lab_map.yaml  my_map.pgm  my_map.yaml  swarm4_map.pgm  swarm_map.yaml
minirys_description/rviz/: minirys2.rviz  minirys4.rviz  nav2_config.rviz
minirys_description/src/description/: minirys_description.urdf  minirys_description4.urdf  model.config
minirys_description/src/description/stl/: LD06_lidar.STL  frame_coordinate_system.STL
minirys_nav2_behavior_pluggins/: CMakeLists.txt  behavior_plugin.xml  package.xml
minirys_nav2_behavior_pluggins/behavior_trees/: collaborate.xml  goalcheck.xml  minirys_nav.xml  nav2_tree_nodes.xml  navigate_w_collaborate_and_recovery.xml  navigate_w_collaborate_and_recovery2.xml  navigate_w_collaborate_and_recovery3.xml  navigate_w_goal_checking.xml
minirys_nav2_behavior_pluggins/include/action/: collaborate.hpp
minirys_nav2_behavior_pluggins/include/condition/: goal_occupancy.hpp
minirys_nav2_behavior_pluggins/src/action/: collaborate.cpp
minirys_nav2_behavior_pluggins/src/condition/: goal_occupancy.cpp
minirys_nav2_bringup/: CMakeLists.txt  package.xml
minirys_nav2_bringup/config/: ekf.yaml  nav2_params.yaml  nav2_params4.yaml  slam_toolbox.yaml
minirys_nav2_bringup/launch/: localization_launch.py  nav_launch.py  navigation_launch.py  slam_toolbox.launch.py
minirys_nav2_bringup/maps/: board.pgm  bosch.pgm  final_map.pgm  final_map.yaml  final_map2.pgm  final_map2.yaml  narrow_corridor_map.pgm  narrow_corridor_map.yaml  nav2_test.pgm  nav2_test.yaml  swarm3_map.yaml  swarm_map.pgm
minirys_nav2_bringup/rviz/: minirys3.rviz  urdf_config.rviz
minirys_nav2_costmap_plugins/: CMakeLists.txt  README.md  multiple_robots_layer.xml  package.xml
minirys_nav2_costmap_plugins/include/: multiple_robots_layer.hpp
minirys_nav2_costmap_plugins/src/: multiple_robots_layer.cpp
src/minirys_description/: package.xml
src/minirys_description/config/: nav2_params4.yaml
src/minirys_description/launch/: localization_launch.py  nav_launch.py  slam_toolbox.launch.py
src/minirys_description/maps/: board.yaml  bosch.yaml  grant_map.pgm  grant_map.yaml  grant_map2.pgm  heros_board.pgm  swarm3_map.pgm  swarm4_map.yaml
src/minirys_description/rviz/: config.rviz  nav2_config.rviz
src/minirys_description/src/description/: minirys_description.urdf  model.sdf
src/minirys_description/src/description/stl/: irys5.STL  wheelpop.STL
